--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+  <span> {% include instagram.html clientId="ed7b5036b29a48d482376be6c3413d24" userId="260010543" accessToken="260010543.ed7b503.9571dca5a7cb4914b866004d67c96ef0" %} </span>
   <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved. Powered by Jekyll.</span>
 </footer>
 
