--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <span> {% include instagram.html clientId="af57a34f75af48c4816c34deee51e4a6" userId="2198686" accessToken="260010543.ed7b503.9571dca5a7cb4914b866004d67c96ef0" %} </span>
+  <span> {% include instagram.html clientId="af57a34f75af48c4816c34deee51e4a6" userId="2198686" accessToken="15c9948cc8454cac903eba8421f5d97d" %} </span>
   <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved. Powered by Jekyll.</span>
 </footer>
 
