--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -23,7 +23,7 @@
 </script>
 <style>
     #instafeed {overflow: auto; margin-left: -1%;}
-    #instafeed a {float: left; display: block; margin: 0 0 10px 10px; width: 19%;}
+    #instafeed a {float: center; display: block; margin: 0 0 1% 1%; width: 19%;}
     #instafeed a img {width: 100%;}
 </style>
 <p id="instafeed"></p>
